--- a/ARKEV analyses.Rmd
+++ b/ARKEV analyses.Rmd
@@ -7,8 +7,9 @@ date: "2025-10-24"
 install.packages('googlesheets4')
 library(googlesheets4)
 MASTER = read_sheet('https://docs.google.com/spreadsheets/d/1jhqeuVwg7_icGaYOh5YpMcoPubQsDs3fn9fWGcZmFi4/edit?gid=1766421584#gid=1766421584')
-
-MASTER = read.csv("BR ARKEV survey data.csv", header = TRUE)
+library(dplyr)
+library(tidyr)
+library(lubridate)
 MASTER <- MASTER %>%
   mutate(count = as.numeric(MASTER$count))%>%
   mutate(percent = as.numeric(MASTER$percent))%>%
@@ -21,8 +22,6 @@ str(MASTER)
 ```
 
 ```{r}
-library(dplyr)
-library(tidyr)
 
 kelp_data_full <- MASTER%>%
   filter(data_type == "kelp")%>%
